update section about

--- a/index.html
+++ b/index.html
@@ -33,19 +33,46 @@
     </header>
 
     <section id="about-me">
-        <div class="container">
-            <div class="perfil-info flex gap-2">
+        <div class="container py-2">
+            <div class="perfil grid gap-2 items-center" >
                 <div class="perfil-img flex">
                     <img src="assets/img/photo-perfil.jfif" alt="">
                 </div>
-                <header class="flex gap-1 items-center">
-                    <h1>Thiago Ferreira</h1>
-                    <img src="assets/icon/checked.svg" alt="">
-                    <div>
-                        <a class="btn" href="#">Seguir</a>
-                        <a class="btn btn-secondary" href="#">Enviar mensagem</a>
+                <div class="perfil-info grid">
+                    <header class="flex gap-1 items-center">
+                        <h1>Thiago Ferreira</h1>
+                        <svg fill="rgb(0, 149, 246)" height="18" role="img" viewBox="0 0 40 40" width="18"><title>Verificado</title>
+                            <path d="M19.998 3.094 14.638 0l-2.972 5.15H5.432v6.354L0 14.64 3.094 20 0 25.359l5.432 3.137v5.905h5.975L14.638 40l5.36-3.094L25.358 40l3.232-5.6h6.162v-6.01L40 25.359 36.905 20 40 14.641l-5.248-3.03v-6.46h-6.419L25.358 0l-5.36 3.094Zm7.415 11.225 2.254 2.287-11.43 11.5-6.835-6.93 2.244-2.258 4.587 4.581 9.18-9.18Z" fill-rule="evenodd"></path>
+                        </svg>
+                        <div>
+                            <a class="btn" href="#">Seguir</a>
+                            <a class="btn btn-secondary" href="#">Enviar mensagem</a>
+                        </div>
+                    </header>
+                    <div class="follow flex">
+                        <a href="#">XXX seguidores</a>
+                        <a href="#">XXX seguindo</a>
                     </div>
-                </header>
+                    <div class="perfil-text">
+                        <p>Amante de viagens, cultura e gastronomia. 🌍✈️<br>  
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+                        </p>
+                    </div>
+                </div>
+                <ul class="perfil-features grid gap-1">
+                    <li>
+                        <img src="assets/icon/gps-icon.svg" alt="ícone de um gps">
+                        <span>Belo Horizonte, Brazil</span>
+                    </li>
+                    <li>
+                        <img src="assets/icon/airplane.svg" alt="icone de um avião">
+                        <span>37 países</span>
+                    </li>
+                    <li>
+                        <img src="assets/icon/album.svg" alt="ícone de um album">
+                        <span>240 fotos</span>
+                    </li>
+                </ul>
                 
 
             </div>
