Update About style - grid

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="about-me">
         <div class="container py-2">
-            <div class="perfil grid gap-2 items-center" >
+            <div class="perfil grid items-center" >
                 <div class="perfil-img flex">
                     <img src="assets/img/photo-perfil.jfif" alt="">
                 </div>
@@ -46,7 +46,7 @@
                         </svg>
                         <div>
                             <a class="btn" href="#">Seguir</a>
-                            <a class="btn btn-secondary" href="#">Enviar mensagem</a>
+                            <a class="desktop-only btn btn-secondary" href="#">Enviar mensagem</a>
                         </div>
                     </header>
                     <div class="follow flex">
