--- a/index.html
+++ b/index.html
@@ -79,6 +79,34 @@
         </div>
     </section>
 
+    <section id="gallery">
+        <div class="grid">
+            <img src="assets/img/Image 01.png" alt="barco em um rio e uma montanha de gelo">
+            <img src="assets/img/Image 02.png" alt="cidade no meio de um rio com alguns barcos">
+            <img src="assets/img/Image 03.png" alt="cidade no meio de um rio, barcos e uma ponte">
+            <img src="assets/img/Image 04.png" alt="restaurante e um rio no meio da cidade">
+            <img src="assets/img/Image 05.png" alt="montanha com várias residencias e um rio ao redor">
+            <img src="assets/img/Image 06.png" alt="cidade no meio de uma montanha um rio e o mar ao fundo">
+            <img src="assets/img/Image 07.png" alt="cidade ao redor de um rio e uma ponte">
+            <img src="assets/img/Image 08.png" alt="uma ingreja que lembra uma cidade na Italia">
+            <img src="assets/img/Image 09.png" alt="um beco entre as residencias">
+            <img src="assets/img/Image 10.png" alt="uma loja de uvas">
+            <img src="assets/img/Image 11.png" alt="pratos com comidas tipicas da italia e taças com vinho">
+            <img src="assets/img/Image 12.png" alt="um pedaço da torre de pizza na italia">
+        </div>
+    </section>
+
+    <footer>
+        <div class="flex items-center gap-1">
+            <p>Travelgram © 2024</p>
+            <div class="links flex gap-1">
+                <a href="#">Termos de uso</a>
+                <a href="#">Política de privacidade</a>
+            </div>
+
+        </div>
+    </footer>
+
 
 </body>
 </html>
